[ADD] Método initDatabase para povoamento de dados, método de registro de usuário limitado à role Citizen, método alternativo para criação de usuário, novas exceptions e pequenas refatorações